update sample jupyter notebook files

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -46,6 +46,269 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = 'Data/stationsample.csv'\n",
+    "pd.read_csv(file).drop(columns=['Unnamed: 0']).to_csv('Data/stationsample_cleaned.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station_id</th>\n",
+       "      <th>station_name</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>neighborhood</th>\n",
+       "      <th>zipcode</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>118</td>\n",
+       "      <td>Eureka Valley Recreation Center</td>\n",
+       "      <td>37.759177</td>\n",
+       "      <td>-122.436943</td>\n",
+       "      <td>The Castro</td>\n",
+       "      <td>94114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>141</td>\n",
+       "      <td>Valencia St at Cesar Chavez St</td>\n",
+       "      <td>37.747998</td>\n",
+       "      <td>-122.420219</td>\n",
+       "      <td>Bernal Heights</td>\n",
+       "      <td>94110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>36</td>\n",
+       "      <td>Folsom St at 3rd St</td>\n",
+       "      <td>37.783830</td>\n",
+       "      <td>-122.398870</td>\n",
+       "      <td>South of Market</td>\n",
+       "      <td>94103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>81</td>\n",
+       "      <td>Berry St at 4th St</td>\n",
+       "      <td>37.775880</td>\n",
+       "      <td>-122.393170</td>\n",
+       "      <td>China Basin</td>\n",
+       "      <td>94107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>95</td>\n",
+       "      <td>Sanchez St at 15th St</td>\n",
+       "      <td>37.766219</td>\n",
+       "      <td>-122.431060</td>\n",
+       "      <td>The Castro</td>\n",
+       "      <td>94114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Embarcadero BART Station (Beale St at Market St)</td>\n",
+       "      <td>37.792251</td>\n",
+       "      <td>-122.397086</td>\n",
+       "      <td>South of Market</td>\n",
+       "      <td>94105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>41</td>\n",
+       "      <td>Golden Gate Ave at Polk St</td>\n",
+       "      <td>37.781270</td>\n",
+       "      <td>-122.418740</td>\n",
+       "      <td>Civic Center</td>\n",
+       "      <td>94102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>113</td>\n",
+       "      <td>Franklin Square</td>\n",
+       "      <td>37.764555</td>\n",
+       "      <td>-122.410345</td>\n",
+       "      <td>Mission District</td>\n",
+       "      <td>94110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>30</td>\n",
+       "      <td>San Francisco Caltrain (Townsend St at 4th St)</td>\n",
+       "      <td>37.776598</td>\n",
+       "      <td>-122.395282</td>\n",
+       "      <td>Mission Bay</td>\n",
+       "      <td>94107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>27</td>\n",
+       "      <td>Beale St at Harrison St</td>\n",
+       "      <td>37.788059</td>\n",
+       "      <td>-122.391865</td>\n",
+       "      <td>Rincon Hill</td>\n",
+       "      <td>94105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>350</td>\n",
+       "      <td>8th St at Brannan St</td>\n",
+       "      <td>37.771431</td>\n",
+       "      <td>-122.405787</td>\n",
+       "      <td>Mission Bay</td>\n",
+       "      <td>94103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>70</td>\n",
+       "      <td>Central Ave at Fell St</td>\n",
+       "      <td>37.773311</td>\n",
+       "      <td>-122.444293</td>\n",
+       "      <td>North of the Panhandle</td>\n",
+       "      <td>94117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>98</td>\n",
+       "      <td>Valencia St at 16th St</td>\n",
+       "      <td>37.765052</td>\n",
+       "      <td>-122.421866</td>\n",
+       "      <td>Mission Dolores</td>\n",
+       "      <td>94103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>105</td>\n",
+       "      <td>16th St at Prosper St</td>\n",
+       "      <td>37.764285</td>\n",
+       "      <td>-122.431804</td>\n",
+       "      <td>The Castro</td>\n",
+       "      <td>94114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>119</td>\n",
+       "      <td>18th St at Noe St</td>\n",
+       "      <td>37.761047</td>\n",
+       "      <td>-122.432642</td>\n",
+       "      <td>The Castro</td>\n",
+       "      <td>94114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>21</td>\n",
+       "      <td>Montgomery St BART Station (Market St at 2nd St)</td>\n",
+       "      <td>37.789625</td>\n",
+       "      <td>-122.400811</td>\n",
+       "      <td>South of Market</td>\n",
+       "      <td>94104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Clay St at Battery St</td>\n",
+       "      <td>37.795001</td>\n",
+       "      <td>-122.399970</td>\n",
+       "      <td>Financial District</td>\n",
+       "      <td>94111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>107</td>\n",
+       "      <td>17th St at Dolores St</td>\n",
+       "      <td>37.763015</td>\n",
+       "      <td>-122.426497</td>\n",
+       "      <td>Mission Dolores</td>\n",
+       "      <td>94114</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    station_id                                      station_name   latitude  \\\n",
+       "0          118                   Eureka Valley Recreation Center  37.759177   \n",
+       "1          141                    Valencia St at Cesar Chavez St  37.747998   \n",
+       "2           36                               Folsom St at 3rd St  37.783830   \n",
+       "3           81                                Berry St at 4th St  37.775880   \n",
+       "4           95                             Sanchez St at 15th St  37.766219   \n",
+       "5           17  Embarcadero BART Station (Beale St at Market St)  37.792251   \n",
+       "6           41                        Golden Gate Ave at Polk St  37.781270   \n",
+       "7          113                                   Franklin Square  37.764555   \n",
+       "8           30    San Francisco Caltrain (Townsend St at 4th St)  37.776598   \n",
+       "9           27                           Beale St at Harrison St  37.788059   \n",
+       "10         350                              8th St at Brannan St  37.771431   \n",
+       "11          70                            Central Ave at Fell St  37.773311   \n",
+       "12          98                            Valencia St at 16th St  37.765052   \n",
+       "13         105                             16th St at Prosper St  37.764285   \n",
+       "14         119                                 18th St at Noe St  37.761047   \n",
+       "15          21  Montgomery St BART Station (Market St at 2nd St)  37.789625   \n",
+       "16          14                             Clay St at Battery St  37.795001   \n",
+       "17         107                             17th St at Dolores St  37.763015   \n",
+       "\n",
+       "     longitude            neighborhood  zipcode  \n",
+       "0  -122.436943              The Castro    94114  \n",
+       "1  -122.420219          Bernal Heights    94110  \n",
+       "2  -122.398870         South of Market    94103  \n",
+       "3  -122.393170             China Basin    94107  \n",
+       "4  -122.431060              The Castro    94114  \n",
+       "5  -122.397086         South of Market    94105  \n",
+       "6  -122.418740            Civic Center    94102  \n",
+       "7  -122.410345        Mission District    94110  \n",
+       "8  -122.395282             Mission Bay    94107  \n",
+       "9  -122.391865             Rincon Hill    94105  \n",
+       "10 -122.405787             Mission Bay    94103  \n",
+       "11 -122.444293  North of the Panhandle    94117  \n",
+       "12 -122.421866         Mission Dolores    94103  \n",
+       "13 -122.431804              The Castro    94114  \n",
+       "14 -122.432642              The Castro    94114  \n",
+       "15 -122.400811         South of Market    94104  \n",
+       "16 -122.399970      Financial District    94111  \n",
+       "17 -122.426497         Mission Dolores    94114  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleanfile = 'Data/stationsample_cleaned.csv'\n",
+    "pd.read_csv(cleanfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
