--- a/sql_basic.ipynb
+++ b/sql_basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "17  37.763015 -122.426497         Mission Dolores    94114  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
        "9       208          0          37              0  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# query = 'SELECT * FROM station JOIN rider ON station.station_id = rider.start_station_id;'\n",
+    "# pd.read_sql(query, engine.connect())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 1,\n",
+       "  'station_id': 118,\n",
+       "  'station_name': 'Eureka Valley Recreation Center',\n",
+       "  'latitude': 37.7591769,\n",
+       "  'longitude': -122.4369431,\n",
+       "  'neighborhood': 'The Castro',\n",
+       "  'zipcode': 94114},\n",
+       " {'id': 2,\n",
+       "  'station_id': 141,\n",
+       "  'station_name': 'Valencia St at Cesar Chavez St',\n",
+       "  'latitude': 37.747998100000004,\n",
+       "  'longitude': -122.42021869999999,\n",
+       "  'neighborhood': 'Bernal Heights',\n",
+       "  'zipcode': 94110},\n",
+       " {'id': 3,\n",
+       "  'station_id': 36,\n",
+       "  'station_name': 'Folsom St at 3rd St',\n",
+       "  'latitude': 37.78383,\n",
+       "  'longitude': -122.39887,\n",
+       "  'neighborhood': 'South of Market',\n",
+       "  'zipcode': 94103},\n",
+       " {'id': 4,\n",
+       "  'station_id': 81,\n",
+       "  'station_name': 'Berry St at 4th St',\n",
+       "  'latitude': 37.77588,\n",
+       "  'longitude': -122.39317,\n",
+       "  'neighborhood': 'China Basin',\n",
+       "  'zipcode': 94107},\n",
+       " {'id': 5,\n",
+       "  'station_id': 95,\n",
+       "  'station_name': 'Sanchez St at 15th St',\n",
+       "  'latitude': 37.7662185,\n",
+       "  'longitude': -122.4310597,\n",
+       "  'neighborhood': 'The Castro',\n",
+       "  'zipcode': 94114},\n",
+       " {'id': 6,\n",
+       "  'station_id': 17,\n",
+       "  'station_name': 'Embarcadero BART Station (Beale St at Market St)',\n",
+       "  'latitude': 37.792251,\n",
+       "  'longitude': -122.39708600000002,\n",
+       "  'neighborhood': 'South of Market',\n",
+       "  'zipcode': 94105},\n",
+       " {'id': 7,\n",
+       "  'station_id': 41,\n",
+       "  'station_name': 'Golden Gate Ave at Polk St',\n",
+       "  'latitude': 37.78127,\n",
+       "  'longitude': -122.41873999999999,\n",
+       "  'neighborhood': 'Civic Center',\n",
+       "  'zipcode': 94102},\n",
+       " {'id': 8,\n",
+       "  'station_id': 113,\n",
+       "  'station_name': 'Franklin Square',\n",
+       "  'latitude': 37.764555,\n",
+       "  'longitude': -122.41034499999999,\n",
+       "  'neighborhood': 'Mission District',\n",
+       "  'zipcode': 94110},\n",
+       " {'id': 9,\n",
+       "  'station_id': 30,\n",
+       "  'station_name': 'San Francisco Caltrain (Townsend St at 4th St)',\n",
+       "  'latitude': 37.776598,\n",
+       "  'longitude': -122.39528200000001,\n",
+       "  'neighborhood': 'Mission Bay',\n",
+       "  'zipcode': 94107},\n",
+       " {'id': 10,\n",
+       "  'station_id': 27,\n",
+       "  'station_name': 'Beale St at Harrison St',\n",
+       "  'latitude': 37.7880593,\n",
+       "  'longitude': -122.39186480000001,\n",
+       "  'neighborhood': 'Rincon Hill',\n",
+       "  'zipcode': 94105},\n",
+       " {'id': 11,\n",
+       "  'station_id': 350,\n",
+       "  'station_name': '8th St at Brannan St',\n",
+       "  'latitude': 37.77143136292109,\n",
+       "  'longitude': -122.40578681230544,\n",
+       "  'neighborhood': 'Mission Bay',\n",
+       "  'zipcode': 94103},\n",
+       " {'id': 12,\n",
+       "  'station_id': 70,\n",
+       "  'station_name': 'Central Ave at Fell St',\n",
+       "  'latitude': 37.77331087889723,\n",
+       "  'longitude': -122.44429260492323,\n",
+       "  'neighborhood': 'North of the Panhandle',\n",
+       "  'zipcode': 94117},\n",
+       " {'id': 13,\n",
+       "  'station_id': 98,\n",
+       "  'station_name': 'Valencia St at 16th St',\n",
+       "  'latitude': 37.765052000000004,\n",
+       "  'longitude': -122.42186609999999,\n",
+       "  'neighborhood': 'Mission Dolores',\n",
+       "  'zipcode': 94103},\n",
+       " {'id': 14,\n",
+       "  'station_id': 105,\n",
+       "  'station_name': '16th St at Prosper St',\n",
+       "  'latitude': 37.764285,\n",
+       "  'longitude': -122.43180420000002,\n",
+       "  'neighborhood': 'The Castro',\n",
+       "  'zipcode': 94114},\n",
+       " {'id': 15,\n",
+       "  'station_id': 119,\n",
+       "  'station_name': '18th St at Noe St',\n",
+       "  'latitude': 37.7610471,\n",
+       "  'longitude': -122.43264170000002,\n",
+       "  'neighborhood': 'The Castro',\n",
+       "  'zipcode': 94114},\n",
+       " {'id': 16,\n",
+       "  'station_id': 21,\n",
+       "  'station_name': 'Montgomery St BART Station (Market St at 2nd St)',\n",
+       "  'latitude': 37.7896254,\n",
+       "  'longitude': -122.400811,\n",
+       "  'neighborhood': 'South of Market',\n",
+       "  'zipcode': 94104},\n",
+       " {'id': 17,\n",
+       "  'station_id': 14,\n",
+       "  'station_name': 'Clay St at Battery St',\n",
+       "  'latitude': 37.795001,\n",
+       "  'longitude': -122.39997,\n",
+       "  'neighborhood': 'Financial District',\n",
+       "  'zipcode': 94111},\n",
+       " {'id': 18,\n",
+       "  'station_id': 107,\n",
+       "  'station_name': '17th St at Dolores St',\n",
+       "  'latitude': 37.7630152,\n",
+       "  'longitude': -122.42649679999998,\n",
+       "  'neighborhood': 'Mission Dolores',\n",
+       "  'zipcode': 94114}]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql_query = 'SELECT * FROM station'\n",
+    "pd.read_sql(sql_query, engine.connect()).to_dict(orient='records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -561,13 +717,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>id</th>\n",
-       "      <th>station_id</th>\n",
-       "      <th>station_name</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>neighborhood</th>\n",
-       "      <th>zipcode</th>\n",
-       "      <th>id</th>\n",
        "      <th>bike_id</th>\n",
        "      <th>start_time</th>\n",
        "      <th>start_station_id</th>\n",
@@ -583,13 +732,6 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>118</td>\n",
-       "      <td>Eureka Valley Recreation Center</td>\n",
-       "      <td>37.759177</td>\n",
-       "      <td>-122.436943</td>\n",
-       "      <td>The Castro</td>\n",
-       "      <td>94114</td>\n",
-       "      <td>1</td>\n",
        "      <td>4036</td>\n",
        "      <td>1527836548</td>\n",
        "      <td>118</td>\n",
@@ -602,13 +744,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>36</td>\n",
-       "      <td>Folsom St at 3rd St</td>\n",
-       "      <td>37.783830</td>\n",
-       "      <td>-122.398870</td>\n",
-       "      <td>South of Market</td>\n",
-       "      <td>94103</td>\n",
        "      <td>2</td>\n",
        "      <td>1607</td>\n",
        "      <td>1527836557</td>\n",
@@ -622,13 +757,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5</td>\n",
-       "      <td>95</td>\n",
-       "      <td>Sanchez St at 15th St</td>\n",
-       "      <td>37.766219</td>\n",
-       "      <td>-122.431060</td>\n",
-       "      <td>The Castro</td>\n",
-       "      <td>94114</td>\n",
        "      <td>3</td>\n",
        "      <td>1701</td>\n",
        "      <td>1527836558</td>\n",
@@ -642,13 +770,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7</td>\n",
-       "      <td>41</td>\n",
-       "      <td>Golden Gate Ave at Polk St</td>\n",
-       "      <td>37.781270</td>\n",
-       "      <td>-122.418740</td>\n",
-       "      <td>Civic Center</td>\n",
-       "      <td>94102</td>\n",
        "      <td>4</td>\n",
        "      <td>3848</td>\n",
        "      <td>1527836592</td>\n",
@@ -662,13 +783,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>San Francisco Caltrain (Townsend St at 4th St)</td>\n",
-       "      <td>37.776598</td>\n",
-       "      <td>-122.395282</td>\n",
-       "      <td>Mission Bay</td>\n",
-       "      <td>94107</td>\n",
        "      <td>5</td>\n",
        "      <td>3800</td>\n",
        "      <td>1527836617</td>\n",
@@ -682,13 +796,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>11</td>\n",
-       "      <td>350</td>\n",
-       "      <td>8th St at Brannan St</td>\n",
-       "      <td>37.771431</td>\n",
-       "      <td>-122.405787</td>\n",
-       "      <td>Mission Bay</td>\n",
-       "      <td>94103</td>\n",
        "      <td>6</td>\n",
        "      <td>3931</td>\n",
        "      <td>1527836663</td>\n",
@@ -702,13 +809,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>13</td>\n",
-       "      <td>98</td>\n",
-       "      <td>Valencia St at 16th St</td>\n",
-       "      <td>37.765052</td>\n",
-       "      <td>-122.421866</td>\n",
-       "      <td>Mission Dolores</td>\n",
-       "      <td>94103</td>\n",
        "      <td>7</td>\n",
        "      <td>2618</td>\n",
        "      <td>1527836711</td>\n",
@@ -722,13 +822,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>14</td>\n",
-       "      <td>105</td>\n",
-       "      <td>16th St at Prosper St</td>\n",
-       "      <td>37.764285</td>\n",
-       "      <td>-122.431804</td>\n",
-       "      <td>The Castro</td>\n",
-       "      <td>94114</td>\n",
        "      <td>8</td>\n",
        "      <td>1202</td>\n",
        "      <td>1527836968</td>\n",
@@ -742,33 +835,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>15</td>\n",
-       "      <td>119</td>\n",
-       "      <td>18th St at Noe St</td>\n",
-       "      <td>37.761047</td>\n",
-       "      <td>-122.432642</td>\n",
-       "      <td>The Castro</td>\n",
-       "      <td>94114</td>\n",
-       "      <td>10</td>\n",
-       "      <td>3934</td>\n",
-       "      <td>1527837028</td>\n",
-       "      <td>119</td>\n",
-       "      <td>1527837236</td>\n",
-       "      <td>107</td>\n",
-       "      <td>208</td>\n",
-       "      <td>0</td>\n",
-       "      <td>37</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>16</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Montgomery St BART Station (Market St at 2nd St)</td>\n",
-       "      <td>37.789625</td>\n",
-       "      <td>-122.400811</td>\n",
-       "      <td>South of Market</td>\n",
-       "      <td>94104</td>\n",
        "      <td>9</td>\n",
        "      <td>116</td>\n",
        "      <td>1527836993</td>\n",
@@ -780,69 +846,65 @@
        "      <td>37</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>3934</td>\n",
+       "      <td>1527837028</td>\n",
+       "      <td>119</td>\n",
+       "      <td>1527837236</td>\n",
+       "      <td>107</td>\n",
+       "      <td>208</td>\n",
+       "      <td>0</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id  station_id                                      station_name  \\\n",
-       "0   1         118                   Eureka Valley Recreation Center   \n",
-       "1   3          36                               Folsom St at 3rd St   \n",
-       "2   5          95                             Sanchez St at 15th St   \n",
-       "3   7          41                        Golden Gate Ave at Polk St   \n",
-       "4   9          30    San Francisco Caltrain (Townsend St at 4th St)   \n",
-       "5  11         350                              8th St at Brannan St   \n",
-       "6  13          98                            Valencia St at 16th St   \n",
-       "7  14         105                             16th St at Prosper St   \n",
-       "8  15         119                                 18th St at Noe St   \n",
-       "9  16          21  Montgomery St BART Station (Market St at 2nd St)   \n",
+       "   id  bike_id  start_time  start_station_id    end_time  end_station_id  \\\n",
+       "0   1     4036  1527836548               118  1527837055             141   \n",
+       "1   2     1607  1527836557                36  1527836841              81   \n",
+       "2   3     1701  1527836558                95  1527837790              17   \n",
+       "3   4     3848  1527836592                41  1527837084             113   \n",
+       "4   5     3800  1527836617                30  1527837008              27   \n",
+       "5   6     3931  1527836663               350  1527837464              70   \n",
+       "6   7     2618  1527836711                98  1527837130              41   \n",
+       "7   8     1202  1527836968               105  1527837088             119   \n",
+       "8   9      116  1527836993                21  1527837181              14   \n",
+       "9  10     3934  1527837028               119  1527837236             107   \n",
        "\n",
-       "    latitude   longitude     neighborhood  zipcode  id  bike_id  start_time  \\\n",
-       "0  37.759177 -122.436943       The Castro    94114   1     4036  1527836548   \n",
-       "1  37.783830 -122.398870  South of Market    94103   2     1607  1527836557   \n",
-       "2  37.766219 -122.431060       The Castro    94114   3     1701  1527836558   \n",
-       "3  37.781270 -122.418740     Civic Center    94102   4     3848  1527836592   \n",
-       "4  37.776598 -122.395282      Mission Bay    94107   5     3800  1527836617   \n",
-       "5  37.771431 -122.405787      Mission Bay    94103   6     3931  1527836663   \n",
-       "6  37.765052 -122.421866  Mission Dolores    94103   7     2618  1527836711   \n",
-       "7  37.764285 -122.431804       The Castro    94114   8     1202  1527836968   \n",
-       "8  37.761047 -122.432642       The Castro    94114  10     3934  1527837028   \n",
-       "9  37.789625 -122.400811  South of Market    94104   9      116  1527836993   \n",
-       "\n",
-       "   start_station_id    end_time  end_station_id  duration  user_type  \\\n",
-       "0               118  1527837055             141       507          0   \n",
-       "1                36  1527836841              81       283          0   \n",
-       "2                95  1527837790              17      1231          0   \n",
-       "3                41  1527837084             113       491          0   \n",
-       "4                30  1527837008              27       391          0   \n",
-       "5               350  1527837464              70       801          0   \n",
-       "6                98  1527837130              41       418          0   \n",
-       "7               105  1527837088             119       119          0   \n",
-       "8               119  1527837236             107       208          0   \n",
-       "9                21  1527837181              14       187          0   \n",
-       "\n",
-       "   member_age  member_gender  \n",
-       "0          46              0  \n",
-       "1          31              0  \n",
-       "2          45              0  \n",
-       "3          53              0  \n",
-       "4          42              0  \n",
-       "5          24              0  \n",
-       "6          53              0  \n",
-       "7          28              0  \n",
-       "8          37              0  \n",
-       "9          37              0  "
+       "   duration  user_type  member_age  member_gender  \n",
+       "0       507          0          46              0  \n",
+       "1       283          0          31              0  \n",
+       "2      1231          0          45              0  \n",
+       "3       491          0          53              0  \n",
+       "4       391          0          42              0  \n",
+       "5       801          0          24              0  \n",
+       "6       418          0          53              0  \n",
+       "7       119          0          28              0  \n",
+       "8       187          0          37              0  \n",
+       "9       208          0          37              0  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query = 'SELECT * FROM station JOIN rider ON station.station_id = rider.start_station_id;'\n",
-    "pd.read_sql(query, engine.connect())"
+    "riderQ = 'SELECT * FROM rider;'\n",
+    "pd.read_sql(riderQ, engine.connect()).astype(int)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
