jupyter notebook updates

--- a/sql_basic.ipynb
+++ b/sql_basic.ipynb
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -889,22 +889,118 @@
        "9       208          0          37              0  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "riderQ = 'SELECT * FROM rider;'\n",
-    "pd.read_sql(riderQ, engine.connect()).astype(int)"
+    "pd.read_sql(riderQ, engine.connect())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average age: 39.60\n"
+     ]
+    }
+   ],
+   "source": [
+    "riderQ = 'SELECT * FROM rider;'\n",
+    "avg_age = pd.read_sql(riderQ, engine.connect())['member_age'].mean()\n",
+    "print(f\"average age: %.2f\" % avg_age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AVG(member_age)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>39.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   AVG(member_age)\n",
+       "0             39.6"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "avg_age_query = 'SELECT AVG(member_age) FROM rider;'\n",
+    "avg_age_result = pd.read_sql(avg_age_query, engine.connect())\n",
+    "avg_age_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 4036, 1527836548, 118, 1527837055, 141, 507, 0, 46, 0),\n",
+       " (2, 1607, 1527836557, 36, 1527836841, 81, 283, 0, 31, 0),\n",
+       " (3, 1701, 1527836558, 95, 1527837790, 17, 1231, 0, 45, 0),\n",
+       " (4, 3848, 1527836592, 41, 1527837084, 113, 491, 0, 53, 0),\n",
+       " (5, 3800, 1527836617, 30, 1527837008, 27, 391, 0, 42, 0),\n",
+       " (6, 3931, 1527836663, 350, 1527837464, 70, 801, 0, 24, 0),\n",
+       " (7, 2618, 1527836711, 98, 1527837130, 41, 418, 0, 53, 0),\n",
+       " (8, 1202, 1527836968, 105, 1527837088, 119, 119, 0, 28, 0),\n",
+       " (9, 116, 1527836993, 21, 1527837181, 14, 187, 0, 37, 0),\n",
+       " (10, 3934, 1527837028, 119, 1527837236, 107, 208, 0, 37, 0)]"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "session.query(rider).all()"
+   ]
   },
   {
    "cell_type": "code",
